--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="card">
       <h3>Bio</h3>
       <p>
-        Meu nome é Isabela Mukotako Porto e sou de SP-São Paulo. Cursei cerca de 2 anos tecnologia em Mecânica de Precisão, porém decidi mudar de área e hoje em dia estudo na Le Wagon para aprender melhor a codar. 
+        Meu nome é Isabela Mukotako Porto e sou de SP-São Paulo. Cursei cerca de 2 anos tecnologia em Mecânica de Precisão, porém decidi mudar de área. Hoje sou formada no Le Wagon e trabalho como Full-Stack Developer na Nothern Ventures. 
       </p>
     </div>
     <div class="card list-inline">
